--- a/Ryr.SolutionHistory/SolutionHistory.resx
+++ b/Ryr.SolutionHistory/SolutionHistory.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADE
-        CQAAAk1TRnQBSQFMAgEBAwEAAVABAAFQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAwEAAVgBAAFYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -176,16 +176,16 @@
   <data name="tsbCloseThisTab.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIASURBVDhPnZFda9NQGMeLIAS/gkhAvWnjKDLxZpqQC7dZ
-        ppZpu6zZEvtiN7v1ZWtJyVZb9ULBT+LHUeyVIPXlYuhwunZL2jTJ33OydGW0RfQHB57kye+f85wT+FeQ
-        zV7wy1Hccpl1NY3zH0foKRmuK8tFI57g/VdDqIzqDlxNh1sqjYT0FIXrJjPoredwGH34th2JBv3WUEb9
-        BVyynK0KerncaYgnqyn080WgVgetD+buFtFonPM+IAXzNSY57s4z4PUbOHoN/aeboFv2ZCUJa7MAkL6p
-        JtEMTdmYnj7vyQOgNpjPGwXbqVSBl69glzV0UxmYq49h5fKAvuvVzdA1uyUIjK+dBarKfEpn7X6+RMZ5
-        DuzWiVgDqjrMFYXI3GR5AA35KIgOdDKOrACSDFQ0fBAE568ypSMpnCmvAuQ2EF8GHi0BpW38np3Hz5mZ
-        iVfs0ZEkzkiswMqsAdsVIpaBAhmHHKAZW8LBbQF74fD4EE9elmGlswC5RkNKkJlD9rtbvHN0LwqsreP4
-        fhT7N25iLxg8G+LJZFYr9YT8dQsG2TqV6cx00bp9Zw5IpXE0H8H3qTC+XLoyDOksLorHcQlWMg0jJp3K
-        fjvQYk9CDgURRmQBP8LX8e0iK/rtE37NRsT2wgO858efdotlmeblq/ZYecA+z4vj5AE0ZKL8fwQCfwDB
-        oEa6A8Wf5QAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH8SURBVDhPnZFda9NQGMeLIAS/gkhgetNGKTLxZpqYC7dZ
+        Nlfm1mbNltgXu1nXl60lJVtt3S4U/CR+G0V6IwhleDF0OF27JW2a5O9JllhGW8T94MCTnPz+Oc9zAv8L
+        stlrXjmMXS7TtqIw3uMQPSnDdEWxqMUSrPdqgCOjugNbUWGXSkMhPUliuskMehs5nESffWhHokFvayCj
+        vgebLGurgl4u9zfEleUU+vkiUKvDqY9nnhTRaFxxPyAFdbAUt+yd18C797DUGvovN+Ec2ZWlJIzNAkD2
+        dTmJZui2icnJq67sA7lBtV4VTKtSBfbfwiwr6KYy0Neew8jlAXXXrZshxmxxHOVpF4EsU1/TWbOfL5F2
+        3gC7dSLWgKoKfVUicmi87OOEfOEeWVBJO6IECCJQUfCZ46x/yg4dQWJ0cQ0gt4HYCrAUB0rb+D09i59T
+        U2Ov2KUjCIyWWIWRWQe2K0QsAwXSDhmgvhzH8UMOh+Hw6BBXXhFhpLMAuUZNSLg9f3zAWqfzUWB9A2dP
+        ozi6dx+HweDFEFcmvRqpF+SvW9DI0f2BOcup249ngFQap7MRfL8TxsGNm4OQzuIifxYTYCTT0JaFoWm3
+        6POQE46HFpnDj/BdfLtO8972Ob+mI3x7bgGf2NHTbtE01Zy4ZY6UfY5Ylh8l+zghY+XLEQj8AaL+Rq21
+        k9ZvAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="tsbSolutionHistory.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
