--- a/Ryr.SolutionHistory/SolutionHistory.resx
+++ b/Ryr.SolutionHistory/SolutionHistory.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADE
-        CQAAAk1TRnQBSQFMAgEBAwEAAVgBAAFYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAwEAARgBAgEYAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -176,16 +176,16 @@
   <data name="tsbCloseThisTab.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH8SURBVDhPnZFda9NQGMeLIAS/gkhgetNGKTLxZpqYC7dZ
-        Nlfm1mbNltgXu1nXl60lJVtt3S4U/CR+G0V6IwhleDF0OF27JW2a5O9JllhGW8T94MCTnPz+Oc9zAv8L
-        stlrXjmMXS7TtqIw3uMQPSnDdEWxqMUSrPdqgCOjugNbUWGXSkMhPUliuskMehs5nESffWhHokFvayCj
-        vgebLGurgl4u9zfEleUU+vkiUKvDqY9nnhTRaFxxPyAFdbAUt+yd18C797DUGvovN+Ec2ZWlJIzNAkD2
-        dTmJZui2icnJq67sA7lBtV4VTKtSBfbfwiwr6KYy0Neew8jlAXXXrZshxmxxHOVpF4EsU1/TWbOfL5F2
-        3gC7dSLWgKoKfVUicmi87OOEfOEeWVBJO6IECCJQUfCZ46x/yg4dQWJ0cQ0gt4HYCrAUB0rb+D09i59T
-        U2Ov2KUjCIyWWIWRWQe2K0QsAwXSDhmgvhzH8UMOh+Hw6BBXXhFhpLMAuUZNSLg9f3zAWqfzUWB9A2dP
-        ozi6dx+HweDFEFcmvRqpF+SvW9DI0f2BOcup249ngFQap7MRfL8TxsGNm4OQzuIifxYTYCTT0JaFoWm3
-        6POQE46HFpnDj/BdfLtO8972Ob+mI3x7bgGf2NHTbtE01Zy4ZY6UfY5Ylh8l+zghY+XLEQj8AaL+Rq21
-        k9ZvAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAHwSURBVDhPnZFfb9JQGIeJiQnxKxhDot4wYoiZ8WZKw4Xb
+        JFPJdKyjW5E/sonjzwaBsCGoF5r4SfwWfAnuifFi0cXpYCtQoI+nXZEsMI0+SZO35/T59bzvcfwrJJNX
+        7HISI593GcWix36doKcmPF1FyWqhsM9eGmPKlPYwimWMXG4ipKeqnm40QW8rxXHw6adWIOi2t8Yy1bcY
+        4hnuFOilUr9DLDkSo5/OQqWKWR8tPMxSq12yPhCFsy5JQ2PvNXz4yLBcof9yG/PIlqxG0bczIPY7kSiN
+        mZkBs7OXLXkEkZqz8SozGBZK8O49g3yRbixBZ+M5eioN5X2rNuWmJDlt7TxEIs5GPDnop3OinTewXxVi
+        BUplOuvqn+URZojZDmXRjqKCrEChiLn2V9mkLauejrIB4jYIrcGzVcjt8nN+ke9zcxdesUVblj1aeB09
+        sQm7BSHmISPaEQPsrKxydF/iwOudHmLJawp6PAniGjU5bPVcv+cbnjwKwuYWp4+DHN65y4HbfT7EkkWv
+        euyF+OsOmjj6aGDmY9atBwsQi3OyGODrLS+fr90Yh7SXl/2nIRk9GkdbkSem3XSdhRxLfrTAEt+8t/ly
+        1eW3t8/4MR/wt5aeUPdNn3bT5XI2rt8cTJVHHPp8/mnyCDPkQvn/cDh+AfUIRflWoctIAAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <data name="tsbSolutionHistory.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
