--- a/Ryr.SolutionHistory/SolutionHistory.resx
+++ b/Ryr.SolutionHistory/SolutionHistory.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADE
-        CQAAAk1TRnQBSQFMAgEBAwEAARgBAgEYAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAwEAASgBAgEoAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -186,6 +186,16 @@
         euyF+OsOmjj6aGDmY9atBwsQi3OyGODrLS+fr90Yh7SXl/2nIRk9GkdbkSem3XSdhRxLfrTAEt+8t/ly
         1eW3t8/4MR/wt5aeUPdNn3bT5XI2rt8cTJVHHPp8/mnyCDPkQvn/cDh+AfUIRflWoctIAAAAAElFTkSu
         QmCC
+</value>
+  </data>
+  <data name="tsbRefreshSolutions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAADqSURBVDhPvVLBDYJAEKQES7AEOpBOMAHCUzuQEugAO9AO
+        pAPtwBKwA525zJI9vfDDSSbHzezu7XKX/RVt227Lstxou4yqqoqmabq6rvdgbhq+H4tFmIDAF5LfntBG
+        eEd9FwqPAbNzCU+sA5IuWCfT5f0WoOiCDtTYKnV25bx0ARhXmjxRUgC0wRKNyQKcDzzxT0uagaQdqe1K
+        wAkdWuvBkeTcsgLYmY2Q6pIF/Iy8gRuKhPsnsA//iLqkGDIDkXi2U1iEHTlvLhpBAXcLTHD6HisCA0A+
+        3Rwrry48Ho0zJOf2UKvpJ7oesuwD7ze/isOMoC8AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsbSolutionHistory.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
